--- a/index.html
+++ b/index.html
@@ -15,13 +15,34 @@
             <div class="nav">
                 <div class="nav-left">
                     <ul>
-                        <li><a href="">File</a></li>
-                        <li><a href="">Edit</a></li>
-                        <li><a href="">Special</a></li>
+                        <li><a href="">File</a>
+                        <ul class="dropdown">
+                            <li><a href="">New</a></li>
+                             <li><a href="">Save</a></li>
+                             <li><a href="">Open</a></li>
+                             <li><a href="">Share</a></li>
+                        </ul>
+                        </li>
+                        <li><a href="">Edit</a>
+                                                <ul class="dropdown">
+                            <li><a href="">Undo</a></li>
+                             <li><a href="">Redo</a></li>
+                             <li><a href="">Copy</a></li>
+                             <li><a href="">Paste</a></li>
+                        </ul></li>
+                        <li><a href="">Special</a>
+                                                <ul class="dropdown">
+                            <li><a href="">Run</a></li>
+                             <li><a href="">Cmd</a></li>
+                             <li><a href="">Reset</a></li>
+                             <li><a href="">Shut Down</a></li>
+                        </ul></li>
                     </ul>
                 </div>
                 <div class="nav-right">
+                         <p>Website OS</p>
                     <h2>2:51AM - JUL. 29,2025</h2>
+               
                 </div>
             </div>
 
